src/objects/IPM_Bosscard__c.object
<CustomObject>
    <description>This object is created to hold the Bosscard Details</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Used for data migration</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPMBosscard_Span__c</fullName>
        <description>To store the span of the BOSSCARD.</description>
        <label>IPMBosscard_Span</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Assumptions__c</fullName>
        <description>This field is used to capture  the assumption content entered by users on the BOSSCARD creation screen.</description>
        <label>Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Background__c</fullName>
        <description>This field is used to capture  the Background content entered by users on the BOSSCARD creation screen.</description>
        <label>Background</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_BosscardIdea__c</fullName>
        <description>To Be Deleted</description>
        <label>Idea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_BosscardName__c</fullName>
        <description>To store the name of the BOSSCARD.</description>
        <label>Name</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IPM_BosscardName_isNull__c</fullName>
        <description>This field will advice if IPM_BosscardName__c is null or not</description>
        <formula>IF( ISBLANK( IPM_BosscardName__c ) , &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will advice if Bosscard Name is null or not</inlineHelpText>
        <label>IPM_BosscardName_isNull</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Approver_Comments__c</fullName>
        <description>Captures Bosscard Approver Comments</description>
        <label>IPM Bosscard Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Last_Modified_Date_Time__c</fullName>
        <description>Used to store the last modified date and time which is useful for auto archival.</description>
        <formula>NOW()</formula>
        <label>IPM Bosscard Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Logo_Id__c</fullName>
        <description>To store the id from standard  document object for the logo.</description>
        <label>Bosscard Logo Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Logo__c</fullName>
        <description>To store the logo of BOSSCARD</description>
        <label>Bosscard Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The users who created the Bosscaard</description>
        <label>Bosscard Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_BosscardOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Span_Logo__c</fullName>
        <description>To display the imaged based on the span , different images for Global , Regional and Local.</description>
        <formula>IF( IPMBosscard_Span__c  = &apos;Global&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/globe.png&apos;,&apos;Global&apos;,21,21),IF(IPMBosscard_Span__c  = &apos;Regional&apos; || IPMBosscard_Span__c  = &apos;Local&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/icoLocal.png&apos;,&apos;Regional/Local&apos;,21,21),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bosscard Span Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscard_Status__c</fullName>
        <description>Stores the status of BOSSCARD</description>
        <label>IPM Bosscard Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPM_Bosscord_Approval_Date__c</fullName>
        <description>To store the approval date of the BOSSCARD.</description>
        <label>Bosscord Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Brand_Positioning__c</fullName>
        <description>To store the brand positioning value</description>
        <label>Brand Positioning</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Brand__c</fullName>
        <description>To be Deleted.</description>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Category_Icon__c</fullName>
        <description>To display the icon based on category.</description>
        <formula>IF(IPM_Category__c  = &apos;Beverages&apos; || IPM_Category__c  = &apos;BEVERAGES&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_beverages.png&apos;,&apos;BEVERAGES&apos;,21,21), 
IF(IPM_Category__c  = &apos;DEODARANTS&apos; || IPM_Category__c  = &apos;Deodarants&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_deo.png&apos;,&apos;DEO&apos;,21,21), 
IF(IPM_Category__c  = &apos;Dressings&apos; || IPM_Category__c  = &apos;DRESSINGS&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_dressings.png&apos;,&apos;DRESSINGS&apos;,21,21), 
IF(IPM_Category__c  = &apos;Hair&apos; || IPM_Category__c  = &apos;HAIR&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_hair.png&apos;,&apos;HAIR&apos;,21,21), 
IF(IPM_Category__c  = &apos;Home Care&apos; || IPM_Category__c  = &apos;HOME CARE&apos; , 
IMAGE(&apos;/resource/IPM_Resource/images/category_homecare.png&apos;,&apos;HOMECARE&apos;,21,21), 
IF(IPM_Category__c  = &apos;Ice Cream&apos; || IPM_Category__c  = &apos;ICE CREAM&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_icecream.png&apos;,&apos;ICECREAM&apos;,21,21), 
IF(IPM_Category__c  = &apos;Laundry&apos; || IPM_Category__c  = &apos;LAUNDRY&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_laundry.png&apos;,&apos;LAUNDRY&apos;,21,21), 
IF(IPM_Category__c  = &apos;ORAL CARE&apos; || IPM_Category__c  = &apos;Oral Care&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_oral.png&apos;,&apos;ORAL&apos;,21,21), 
IF( IPM_Category__c  = &apos;SAVORY&apos; || IPM_Category__c  = &apos;Savory&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_savoury.png&apos;,&apos;SAVOURY&apos;,21,21), 
IF(IPM_Category__c  = &apos;Skin Care&apos; || IPM_Category__c  = &apos;SKIN CARE&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_skincare.png&apos;,&apos;SKINCARE&apos;,21,21), 
IF(IPM_Category__c  = &apos;Skin Cleansing&apos; || IPM_Category__c  = &apos;SKIN CLEANSING&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_skincleansing.png&apos;,&apos;SKINCLEANSING&apos;,21,21), 
IF(IPM_Category__c  = &apos;Spreads&apos; || IPM_Category__c  = &apos;SPREADS&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_spreads.png&apos;,&apos;SPREADS&apos;,21,21), 
IF(IPM_Category__c  = &apos;Household Care&apos; || IPM_Category__c  = &apos;HOUSEHOLD CARE&apos; || IPM_Category__c  = &apos;HHC&apos;, 
IMAGE(&apos;/resource/IPM_Resource/images/category_HHC.png&apos;,&apos;HOUSEHOLD CARE&apos;,21,21), 
&apos;&apos;)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPM Category Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Category__c</fullName>
        <description>To store the category value of BOSSCARD.</description>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Company_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To relate BOSSCARD to a Company card.</description>
        <label>IPM Company Card</label>
        <referenceTo>IPM_Company_Card__c</referenceTo>
        <relationshipLabel>IPM Bosscard</relationshipLabel>
        <relationshipName>IPM_Bosscard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Constraints__c</fullName>
        <description>This field is used to capture the  Constraints content entered by users on the BOSSCARD creation screen.</description>
        <label>Constraints</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Consumer_Need__c</fullName>
        <description>This field is used to capture the  Consumer Need content entered by users on the BOSSCARD creation screen.</description>
        <label>Consumer Need</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Deliverables__c</fullName>
        <description>This field is used to capture the deliverables content entered by users on the BOSSCARD creation screen.</description>
        <label>Deliverables</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Filled_In_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To capture the % completion of the Bosscard Details</description>
        <label>IPM Filled In Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Gate_Keeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture the gate keeper user name</description>
        <label>Gate Keeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_Bosscard</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_IsSaved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On Click of Save this value is checked to true , As on click of Cancel we need to delete the created BOSSCARD.</description>
        <label>IsSaved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Is_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Checked when BOSSCARD is approved.</description>
        <label>Is Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the BOSSCARD status is Archived.</description>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Is_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the purpose of Auto Save. But as of now auto save logic is on hold.</description>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Opportunity__c</fullName>
        <description>This field is used to capture the Opportunity content entered by users on the BOSSCARD creation screen.</description>
        <inlineHelpText>Opportunity Information</inlineHelpText>
        <label>Opportunity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Potential_Business_Opportunity__c</fullName>
        <description>This field is used to capture the Potential Business Opportunity content entered by users on the BOSSCARD creation screen.</description>
        <label>Potential Business Opportunity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Project_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to store project leader while approving the bosscard</description>
        <label>Project Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPM_ProjectLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Region_Shr__c</fullName>
        <description>To store the region value from the company card which is useful to retrieve brand positioning values and used for sharing BOSSCARDS as well.</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Region__c</fullName>
        <description>To Be Deleted.</description>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Resources__c</fullName>
        <description>This field is used to capture the Resources content entered by users on the BOSSCARD creation screen.</description>
        <label>Resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Scope__c</fullName>
        <description>This field is used to capture the Scope content entered by users on the BOSSCARD creation screen.</description>
        <label>Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Small_C_shr__c</fullName>
        <description>To Be Deleted.</description>
        <label>Small C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Sustainibility__c</fullName>
        <description>This field is used to capture the Sustainability content entered by users on the BOSSCARD creation screen.</description>
        <label>Sustainability</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IPM_Target_Launch_Date__c</fullName>
        <description>to specify the target launch date by Project Leaders during the time of BOSSCARD creation.</description>
        <label>Target Launch Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_isBosscardSkipped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when user clicks on Skip BOSSCARD button on BOSSCARD Creation Screen.</description>
        <label>isBosscardSkipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Those bosscards which will have no activity within 6 months will be marked as deleted.</description>
        <label>Is Delete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTypeValue__c</fullName>
        <description>Its an actual value of project type store internally</description>
        <label>ProjectTypeValue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be deleted</description>
        <label>To be Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Project__c</fullName>
        <description>Type of Project values to select from: Innnovation/Renovation [Project Type = Original], BLG [Project Type = Original], and Operational [Project Type = Operational]</description>
        <inlineHelpText>Value selected here will be default for Project creation</inlineHelpText>
        <label>Type of Project</label>
        <picklist>
            <picklistValues>
                <fullName>Innovation/Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Led Growth(BLG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_By_Workflow_175_days__c</fullName>
        <description>Used for Auto Archival.</description>
        <label>Used By Workflow 175 days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_By_Workflow_30_days__c</fullName>
        <description>Used for Auto Archival.</description>
        <label>Used By Workflow 30 days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IPM Bosscard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>IPM_BosscardName__c</columns>
        <columns>IPM_Background__c</columns>
        <columns>IPM_Potential_Business_Opportunity__c</columns>
        <columns>IPM_Consumer_Need__c</columns>
        <columns>IPM_Scope__c</columns>
        <columns>IPM_Sustainibility__c</columns>
        <columns>IPM_Constraints__c</columns>
        <columns>IPM_Assumptions__c</columns>
        <columns>IPM_Resources__c</columns>
        <columns>IPM_Deliverables__c</columns>
        <columns>IPM_Brand__c</columns>
        <columns>IPM_Brand_Positioning__c</columns>
        <columns>IPM_Target_Launch_Date__c</columns>
        <columns>IPM_Gate_Keeper__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IPM_BosscardName__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GqFa_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000GqFa</label>
        <queue>IPM_a7I0L000000GqFa</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GqFk_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000GqFk</label>
        <queue>IPM_a7I0L000000GqFk</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gr3E_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Gr3E</label>
        <queue>IPM_a7I0L000000Gr3E</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gr3U_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Gr3U</label>
        <queue>IPM_a7I0L000000Gr3U</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZl_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_DUMMY1</label>
        <queue>IPM_a7I0L000000GrZl</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZq_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_BIG BANG EU _EU</label>
        <queue>IPM_a7I0L000000GrZq</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000GrZv_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_DUMMY2</label>
        <queue>IPM_a7I0L000000GrZv</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grae_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Grae</label>
        <queue>IPM_a7I0L000000Grae</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Graj_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_a7I0L000000Graj</label>
        <queue>IPM_a7I0L000000Graj</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grao_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_RK CLARITY</label>
        <queue>IPM_a7I0L000000Grao</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grat_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_HACIENDA</label>
        <queue>IPM_a7I0L000000Grat</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Gray_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_HELIUM 1</label>
        <queue>IPM_a7I0L000000Gray</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grb3_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_FESTIVAL 3</label>
        <queue>IPM_a7I0L000000Grb3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IPM_a7I0L000000Grb8_IPM_Bosscard</fullName>
        <filterScope>Queue</filterScope>
        <label>IPM_SENORITA</label>
        <queue>IPM_a7I0L000000Grb8</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>IPM Bosscard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPM Bosscard</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>